feat(web-client): the css styles added for PinBoard component

--- a/public/assets/styles/ui_components.css
+++ b/public/assets/styles/ui_components.css
@@ -47,3 +47,13 @@
     box-shadow: 0 0 0 0.1em #000000;
     z-index: 2;
 }
+
+/* ------------------------------------- PinboardCom */
+
+.pinboard-layout {
+    position: relative;
+}
+
+.pinboard-layout .item {
+    position: absolute;
+}
