feat: add ‘permanent’ option to commands
- The non-permanent commands called 'optional', and we could cancel them by applying an action with asset index of '0'.

--- a/public/assets/styles/ui_components.css
+++ b/public/assets/styles/ui_components.css
@@ -27,6 +27,10 @@
 
 /* ------------------------------------- GridCom */
 
+:root {
+  --grid-blank-image: none;
+}
+
 .grid-layout {
   list-style: none;
   margin: 0;
