--- a/public/assets/themes/fancy_theme/fancy_theme_with_animations.css
+++ b/public/assets/themes/fancy_theme/fancy_theme_with_animations.css
@@ -1,36 +1,36 @@
 @import "./fancy_theme.css";
 
-.mf-designer-screen-tpl .cat-frame .tab {
+.mf-designer-screen-tpl .navigator-options .tab {
   transition: background-color 0.2s, opacity 0.2s, width 0.2s, padding-top 0.2s;
 }
 
-.mf-designer-screen-tpl .cat-frame .tab:hover {
+.mf-designer-screen-tpl .navigator-options .tab:hover {
   width: 75%;
   padding-top: 75%;
 }
 
-.mf-designer-screen-tpl .res-frame .tab {
+.mf-designer-screen-tpl .command-navigator .tab {
   transition: font-size 0.1s;
 }
 
-.mf-designer-screen-tpl .res-frame .tab:hover {
+.mf-designer-screen-tpl .command-navigator .tab:hover {
   font-size: 1.5em;
 }
 
-.mf-designer-screen-tpl .shapes-frame .grid-select-slot {
+.mf-designer-screen-tpl .asset-grid .grid-select-slot {
   background-size: 100% 100%;
   transition: background-size 0.1s, opacity 0.1s;
 }
 
-.mf-designer-screen-tpl .shapes-frame .grid-select-slot:hover {
+.mf-designer-screen-tpl .asset-grid .grid-select-slot:hover {
   background-size: 150% 150%;
 }
 
-.mf-designer-screen-tpl .colors-frame .grid-select-slot {
+.mf-designer-screen-tpl .color-grid .grid-select-slot {
   transition: width 0.2s, padding-top 0.2s;
 }
 
-.mf-designer-screen-tpl .colors-frame .grid-select-slot:hover {
+.mf-designer-screen-tpl .color-grid .grid-select-slot:hover {
   width: 90%;
   padding-top: 90%;
 }
